b=256622, crash when refreshing live bookmarks, r+a=shaver